--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "width":"100%",
+      "height":"100%"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
