--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "expo-vector-icons": "^10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "0.17.1",
+    "react-style-proptype": "^3.2.2",
+    "expo-splash-screen": "~0.13.5",
+    "expo-linear-gradient": "~10.0.3",
+    "expo-blur": "~10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
